# pyfilesystem2

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  appveyor.yml  fs2  makereadme.sh  pull_request_template.md  pyproject.toml  readme.md  release.sh  requirements-readthedocs.txt  requirements.txt  runslowtests.sh  runtests.sh  setup.cfg  setup.py  testrequirements.txt  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: package.yml  test.yml
docs/: Makefile  builddocs.sh  make.bat  requirements.txt  tree.html
docs/source/: base.rst  builtin.rst  concepts.rst  conf.py  enums.rst  errors.rst  extension.rst  external.rst  ftpfs.rst  globbing.rst  guide.rst  implementers.rst  index.rst  info.rst  info_objects.rst  interface.rst  introduction.rst  memoryfs.rst  mountfs.rst  multifs.rst  opener.rst  openers.rst  osfs.rst  path.rst  reference.rst  subfs.rst  tree.rst  walking.rst
docs/source/reference/: appfs.rst  base.rst  compress.rst  copy.rst  enums.rst  errors.rst  filesize.rst  ftpfs.rst  glob.rst  memoryfs.rst  mirror.rst  mode.rst  mountfs.rst  move.rst  multifs.rst  opener.rst  osfs.rst  path.rst  permissions.rst  subfs.rst  tarfs.rst  tempfs.rst  tools.rst  tree.rst  walk.rst  wildcard.rst  wrap.rst  wrapfs.rst  zipfs.rst
examples/: README.txt  count_py.py  find_dups.py  rm_pyc.py  upload.py
fs/: __init__.py  _bulk.py  _fscompat.py  _ftp_parse.py  _pathcompat.py  _repr.py  _typing.py  _tzcompat.py  _url_tools.py  _version.py  appfs.py  base.py  compress.py  constants.py  copy.py  enums.py  error_tools.py  errors.py  filesize.py  ftpfs.py  glob.py  info.py  iotools.py  lrucache.py  memoryfs.py  mirror.py  mode.py  mountfs.py  move.py  multifs.py  opener.py  osfs.py  patch.py  path.py  permissions.py  subfs.py  tarfs.py  tempfs.py  test.py  time.py  (+8 more)
fs/commands/: __init__.py  _tools.py  _words2lines.py  cat.py  cp.py  dl.py  fs2.py  help.py  ls.py  mkdir.py  mv.py  rm.py  tree.py  up.py
fs/examples/: __init__.py  count_py.py  find_dups.py  rm_pyc.py  upload.py
fs/expose/: importhook.py
fs/opener/: __init__.py  _base.py  _errors.py  _registry.py  appfs.py  base.py  errors.py  ftpfs.py  memoryfs.py  osfs.py  parse.py  registry.py  tarfs.py  tempfs.py  zipfs.py
fs/patch/: __init__.py  __main__.py  _install.py  _patch.py  base.py  patch_builtins.py  patch_os.py  translate_errors.py
fs/patcher/: __init__.py  __main__.py  _patch.py  common_patches.py  context.py  py3_patches.py  stack.py
tests/: conftest.py  mark.py  proftp.py  requirements.txt  test_appfs.py  test_archives.py  test_base.py  test_bulk.py  test_copy.py  test_doctest.py  test_encoding.py  test_enums.py  test_error_tools.py  test_errors.py  test_filesize.py  test_fs.py  test_fs2.py  test_fscompat.py  test_ftp_parse.py  test_ftpfs.py  test_glob.py  test_importhook.py  test_imports.py  test_info.py  test_iotools.py  test_lrucache.py  test_memoryfs.py  test_mirror.py  test_mode.py  test_mountfs.py  test_move.py  test_multifs.py  test_new_name.py  test_opener.py  test_osfs.py  test_path.py  test_permissions.py  test_subfs.py  test_tarfs.py  test_tempfs.py  (+11 more)
