[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Reports = https://github.com/PyFilesystem/pyfilesystem2/issues
    Documentation = https://pyfilesystem2.readthedocs.io/en/latest/
    Wiki = https://www.pyfilesystem.org/

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
ignore_missing_imports = true

[mypy-fs.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false

[mypy-fs.test]
disallow_untyped_defs = false

[coverage:run]
branch = true
omit = fs/test.py
source = fs

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover
    if False:
    @typing.overload
    @overload

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[flake8]
extend-ignore = E203,E402,W503
max-line-length = 88
per-file-ignores =
    fs/__init__.py:F401
    fs/*/__init__.py:F401
    tests/*:E501
    fs/opener/*:F811
    fs/_fscompat.py:F401

[isort]
default_section = THIRD_PARTY
known_first_party = fs
known_standard_library = typing
line_length = 88
