[bdist_wheel]
universal = 1

[metadata]
version = attr: fs._version.__version__
name = fs
author = Will McGugan
author_email = will@willmcgugan.com
maintainer = Martin Larralde
maintainer_email = martin.larralde@embl.de
url = https://github.com/PyFilesystem/pyfilesystem2
license = MIT
license_file = LICENSE
description = Python's filesystem abstraction layer
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Filesystems
project_urls =
    Bug Reports = https://github.com/PyFilesystem/pyfilesystem2/issues
    Documentation = https://pyfilesystem2.readthedocs.io/en/latest/
    Wiki = https://www.pyfilesystem.org/

[options]
zip_safe = false
packages = find:
setup_requires =
    setuptools >=38.3.0
install_requires =
    appdirs~=1.4.3
    pytz
    setuptools
    six ~=1.10
    enum34 ~=1.1.6      ;  python_version < '3.4'
    typing ~=3.6        ;  python_version < '3.6'
    backports.os ~=0.1  ;  python_version < '3.0'

[options.extras_require]
scandir =
    scandir~=1.5        ;  python_version < '3.5'

[options.packages.find]
exclude = tests

[options.package_data]
fs = py.typed

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
ignore_missing_imports = true

[mypy-fs.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false

[mypy-fs.test]
disallow_untyped_defs = false

[coverage:run]
branch = true
omit = fs/test.py
source = fs

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover
    if False:
    @typing.overload
    @overload

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[flake8]
extend-ignore = E203,E402,W503
max-line-length = 88
per-file-ignores =
    fs/__init__.py:F401
    fs/*/__init__.py:F401
    tests/*:E501
    fs/opener/*:F811
    fs/_fscompat.py:F401

[isort]
default_section = THIRD_PARTY
known_first_party = fs
known_standard_library = typing
line_length = 88
